# algo-trading-backtester

./: .gitignore  CMakeLists.txt  MakeFile  Makefile  Readme.MD
include/: Backtester.hpp  CSVParser.hpp  TechnicalIndicators.hpp  types.hpp
scripts/: download_stock_data.py
src/: Backtester.cpp  CSVParser.cpp  TechnicalIndicators.cpp  main.cpp
